--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link href="./bootstrap.min.css" rel="stylesheet">
-    <title>Hello World!</title>
+    <title>Alarm and Stopwatch</title>
 </head>
 
-<body class="h-100">
+<body class="h-100 user-select-none bg-gradient bg-dark">
     <div class="container text-center h-100">
-        <div class="row row-cols-4 h-100 align-content-center">
+        <div class="row row-cols-4 h-100 align-content-center text-white">
             <div class="col align-self-center my-1 mx-0 p-0">
                 <p class="h4">Date</p>
                 <hr>
@@ -40,7 +40,7 @@
             </div>
             <div class="row align-self-center my-1 mx-0 p-0">
                 <p class="m-0 p-0">
-                    <a class="text-black" data-bs-toggle="collapse" href="#collapseExample"
+                    <a class="link-light" data-bs-toggle="collapse" href="#collapseExample"
                         role="button" aria-expanded="false" aria-controls="collapseExample">
                         View Alarms
                     </a>
